<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="50dp">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.sorbellini.s214631.lab1.editProfile"
    tools:showIn="@layout/activity_edit_profile">
    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#000000"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_empty_photo"
        android:contentDescription="@string/iv_description"
        android:onClick="selectPhoto"/>
    <EditText
        android:id="@+id/edit_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"/>
    <EditText
        android:id="@+id/edit_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"/>
    <EditText
        android:id="@+id/edit_bio"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bio_hint"/>
    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="saveData"/>
</LinearLayout>

</ScrollView>